lunch project_ test

--- a/index.html
+++ b/index.html
@@ -1,21 +1,48 @@
 <!DOCTYPE html>
 <html>
     <head>
-<meta charset="utf-8">
+        <meta charset="utf-8">
     </head>
     <body>
-        <h1 class="text_centered">
-            PRESENTATION
-        </h1>
-<img src="IMG_1202.jpg" alt="profile">
-<p></p>
-<p></p>
-<p></p>
-<div>
-<h1>
-    
-</h1>
+       <nav>
+           <ul>
+              <a href="#Biogra" target="_self"> <li>Biographie</li></a>
+              <a href="#Portofolio" target="_self"> <li>Portofolio</li></a>
+               <li></li>
+           </ul>
+           <p>
+               Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+               Sunt <span>quisquam alias</span>, quibusdam error est ipsum cumque 
+               suscipit at repudiandae! Error doloribus adipisci illum 
+               sint obcaecati non cumque dolorem, 
+               omnis praesentium.
+           </p>
+       </nav>
+<div class="Biogra">
+    <h1>
+        Biographie    
+    </h1>
+    <img src="images/Pirate-Flag.jpg" alt="pirateriejamaisfinis">
+    <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        Sunt <span>quisquam alias</span>, quibusdam error est ipsum cumque 
+        suscipit at repudiandae! Error doloribus adipisci illum 
+        sint obcaecati non cumque dolorem, 
+        omnis praesentium.
+    </p>
 </div>
-<div></div>
+<div class="Portofolio">
+    <h1>
+        Portofolio
+    </h1>
+    <img src="images/k000007_featured.jpg" alt="pirateriejamaisfinis">
+    <p>
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+        Sunt <span>quisquam alias</span>, quibusdam error est ipsum cumque 
+        suscipit at repudiandae! Error doloribus adipisci illum 
+        sint obcaecati non cumque dolorem, 
+        omnis praesentium.
+    </p>
+</div>
     </body>
 </html>
