--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
                <li></li>
            </ul>
            <p>
-               Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-               Sunt <span>quisquam alias</span>, quibusdam error est ipsum cumque 
-               suscipit at repudiandae! Error doloribus adipisci illum 
-               sint obcaecati non cumque dolorem, 
-               omnis praesentium.
+               Lorem ipsum dolor sit, amet consectetur adipisicing elit. <br>
+               Sunt <span>quisquam alias</span>, quibusdam error est ipsum cumque<br> 
+               suscipit at repudiandae! Error doloribus adipisci illum <br>
+               sint obcaecati non cumque dolorem, <br>
+               omnis praesentium.<br>
+               
            </p>
        </nav>
 <div class="Biogra">
