--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<!--<html>
     <head>
         <meta charset="utf-8">
     </head>
@@ -63,4 +63,46 @@
     <tr></tr>
 </table>
     </body>
+</html> -->
+<html>
+   <head>
+       <meta charset="UTP-8">
+   </head>
+   <body>
+     <div>
+         <ul>
+            <a href=""><li></li></a>
+            <a href=""><li></li></a>
+            <a href=""><li></li></a>
+            <a href=""><li></li></a>
+            <a href=""><li></li></a>
+            <a href=""><li></li></a>
+            <a href=""><li></li></a>
+         </ul>
+     </div>
+     <section>
+         <a href=""></a>
+         <a href=""></a>
+         <a href=""></a>
+         <a href=""></a>
+     </section>
+     <h1></h1>
+     <img src="" alt="">
+     <p>
+        Hans Ulrich Obrist (b. 1968, Zurich, Switzerland) is Co- <br>
+        Director of the Serpentine Galleries, London. Prior to this, he <br>
+        was the Curator of the Musée d’Art Moderne de la Ville de <br>
+        Paris. Since his first show “World Soup” (The Kitchen Show) in <br> 
+        1991 he has curated more than 300 shows.  <br>
+     </p>
+     <p>
+     <div>
+         
+     </div>
+     </p>
+
+   </body>
+   <footer>
+
+   </footer>
 </html>
